--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0"
   },
